--- a/style.css
+++ b/style.css
@@ -435,3 +435,18 @@ section {
   box-shadow: 0 4px 14px rgba(0, 0, 0, 0.45);
   display: block;
 }
+.roc-images {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; /* למסכים קטנים */
+  margin-top: 15px;
+}
+
+.roc-images img {
+  max-width: 30%;
+  height: auto;
+  border-radius: 6px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+}
